force-app/main/default/objects/ucl_Error_Log__c/ucl_Error_Log__c.object-meta.xml
<CustomObject>
    <label>Error Registry</label>
    <nameField>
        <label>Error</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Errors Registry</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>