force-app/main/default/objects/ucl_Error_Log__c/fields/affectedRecords__c.field-meta.xml
<CustomField>
    <fullName>affectedRecords__c</fullName>
    <label>Registros</label>
    <length>100</length>
    <type>Text</type>
</CustomField>