force-app/main/default/objects/ucl_Error_Log__c/fields/errorMessage__c.field-meta.xml
<CustomField>
    <fullName>errorMessage__c</fullName>
    <label>Mensaje de error</label>
    <length>100</length>
    <type>Text</type>
</CustomField>