force-app/main/default/objects/ucl_Error_Log__c/fields/Fecha__c.field-meta.xml
<CustomField>
    <fullName>Fecha__c</fullName>
    <label>Fecha/Hora</label>
    <type>DateTime</type>
</CustomField>